switched to html-loader for template loading

--- a/src/app.html
+++ b/src/app.html
@@ -1,2 +1,1 @@
-<span data-bind="text: ko.utils.unwrapObservable(greeting).name"></span>
-<sidebar></sidebar>
+<span data-bind="text: greeting"></span>
